# wdyaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_assemble_prompt.py  test_sanitize_input.py  test_skill_protocol.py  test_validate_prompt.py  test_validate_prompt_hybrid.py
wdyaw/: SKILL.md  __init__.py
wdyaw/references/: prompt-patterns.md
wdyaw/scripts/: assemble_prompt.py  sanitize_input.py  validate_prompt.py  validate_prompt_hybrid.py  validate_prompt_llm.py
